deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  namespace: atlan
  labels:
    app: backend-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
        - name: backend
          image: hashicorp/http-echo:0.2.3
          args:
            - "-text=backend-ok"
          ports:
            - containerPort: 5678
