backend-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: atlan
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: 80
