frontend-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: atlan
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30081
