service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: atlan
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 5678
      targetPort: 5678
