service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: atlan
  labels:
    app: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
